gitlab/issues_text/target_missing/host_missing/accel_missing/2770
Build failure due to missing  keyctl_pkey_encrypt
Description of problem:

Steps to reproduce:
1. git checkout v7.2.0
2. ./configure --target-list=arm-softmmu;make
3. ../backends/cryptodev-lkcf.c: In function ‘cryptodev_lkcf_execute_task’:
../backends/cryptodev-lkcf.c:358:19: error: implicit declaration of function ‘keyctl_pkey_encrypt’; did you mean ‘keyctl_reject’? [-Werror=implicit-function-declaration]
             ret = keyctl_pkey_encrypt(key_id, op_desc,
                   ^~~~~~~~~~~~~~~~~~~
                   keyctl_reject
../backends/cryptodev-lkcf.c:358:19: error: nested extern declaration of ‘keyctl_pkey_encrypt’ [-Werror=nested-externs]
Additional information:

